# socket-io-client

./: .gitignore  README.md  next.config.ts  package.json  publish.sh
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icons.sh  icon.icns
src-tauri/src/: connection.rs  db.rs  emit_log.rs  lib.rs  main.rs  mcp_server.rs  pinned.rs  socket_client.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/components/: ComposeMessageModal.tsx  ConnectionModal.tsx  EmitLogPanel.tsx  EventList.tsx  EventTags.tsx  HistoryPanel.tsx  JsonEditorView.tsx  JsonTreeView.tsx  JsonViewerModal.tsx  McpModal.tsx  MessageCard.tsx  MessageEditor.tsx  PinNameModal.tsx  PinnedList.tsx  PinnedPanel.tsx  SendMessageModal.tsx  Sidebar.tsx
src/app/hooks/: useSocket.ts  useTauri.ts
src/app/lib/: download.ts  jsonPayload.ts  socket.ts  socketListeners.ts
src/app/stores/: mcpStore.ts  socketStore.ts
