[package]
name = "socket-io-client"
version = "0.1.3"
description = "A Socket.IO Client Desktop Application"
authors = ["Peilin Wu"]
license = "MIT"
repository = "https://github.com/dickwu/socket-io-client"
edition = "2021"

[lib]
name = "socket_io_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
chrono = "0.4"
lazy_static = "1.4"
